@@ -46,6 +46,8 @@ Bugfixes:
     that do not contain the "Image:" or "Category:" namespace.
   * Viewing a topic that is currently a redirect from its history page should
     not redirect.
+  * Use the wiki system directory for temp file storage in ImageIO processing
+    to prevent errors on misconfigured systems.  Reported by jfbraz.
 
 Translation Updates:
 
